@@ -1,5 +1,10 @@
 2011-05-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-sum.el (gnus-select-newsgroup): Auto-expiry doesn't make sense
+	in read-only groups.
+
+	* gnus-group.el (gnus-group-mark-article-read): Ditto
+
 	* message.el (message-cite-reply-position): Doc string fix.
 
 	* nnimap.el (nnimap-transform-headers): Simplify regexp to hopefully
